fix: scale down form to prevent overflow

--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -22,6 +22,7 @@
     border-radius: 11px;
     box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
     max-width: 470px;
+    scale: 0.85
 }
 
 label {
